Added assessment Link endpoits,made dynamic header & footer..