@@ -1,7 +1,8 @@
 package com.example.service;
 
-import java.util.ArrayList;
 import java.util.List;
+import java.util.Optional;
+import java.util.Set;
 import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
@@ -13,57 +14,92 @@ import com.example.repository.AssessmentRepository;
 
 @Service
 public class AssessmentService {
-	
+
 	@Autowired
 	private AssessmentRepository repository;
 	
-	
-	//add assessment
-	public Boolean saveAssessment(String assessmentName, String assessmentType) {
-		Assessment assessment =new Assessment(assessmentName, assessmentType);
-		// TODO Auto-generated method stub
-		if(repository.save(assessment)!=null) {
+
+	// Add or Restore Assessment
+	public Boolean addOrRestoreAssessment(String assessmentName, String assessmentType) {
+		Optional<Assessment> existingAssessment = repository.findByName(assessmentName);
+
+		if (existingAssessment.isEmpty()) {
+			// If assessment does not exist, create a new one
+			Assessment newAssessment = new Assessment(assessmentName, assessmentType);
+			repository.save(newAssessment);
 			return true;
-		}else {
-			return false;
 		}
+
+		Assessment assessment = existingAssessment.get();
+
+		if (assessment.getIsDeleted()) {
+			// If the assessment exists but is marked as deleted, restore it
+			assessment.setIsDeleted(false);
+			repository.save(assessment);
+			return true;
+		}
+
+		// If assessment already exists and is not deleted, return false
+		return false;
 	}
-	
-	//view assessment by name
-	
-	
-	//view Assessment by type
-	public List<Assessment> viewAssessmentByType(String assessmentType){
+
+	// view assessment by name
+
+	// view Assessment by type
+	public List<Assessment> viewAssessmentByType(String assessmentType) {
 		return repository.findByType(assessmentType);
-		
+
 	}
-	//remove assessment
+	// remove assessment
 
 	public List<AssessmentDTO> getAllAssessments() {
 		// TODO Auto-generated method stub
-		List<Assessment> assessments= repository.findAll();
-		
+		List<Assessment> assessments = repository.findAll().stream().filter(a -> a.getIsDeleted() == false).toList();
+
 		return toAssessmentDTO(assessments);
 	}
 
-	private List<AssessmentDTO> toAssessmentDTO(List<Assessment> assessments) {
-	    return assessments.stream()
-	            .map(assessment -> AssessmentDTO.builder()
-	                    .id(assessment.getId())
-	                    .name(assessment.getName())
-	                    .type(assessment.getType())
-	                    .build())
-	            .collect(Collectors.toList());
+	public List<AssessmentDTO> getArchivedAssessments() {
+		// TODO Auto-generated method stub
+		List<Assessment> assessments = repository.findAll().stream().filter(a -> a.getIsDeleted() == true).toList();
+
+		return toAssessmentDTO(assessments);
 	}
 
 	public boolean deleteAssessmentById(Long id) {
 		// TODO Auto-generated method stub
-		var assesment=repository.findById(id).get();
+		Assessment assesment = repository.findById(id).get();
 		assesment.setIsDeleted(true);
 		repository.save(assesment);
 		return true;
 	}
+	
+	public boolean addArchivedAssessment(Long id) {
+		// TODO Auto-generated method stub
+		Assessment assesment = repository.findById(id).get();
+		assesment.setIsDeleted(false);
+		repository.save(assesment);
+		return true;
+	}
 
+	public Set<String> getAllAssessmentName() {
+		// TODO Auto-generated method stub
+		return repository.findAll().stream().map(a -> a.getName()).collect(Collectors.toSet());
+	}
+
+	public Set<String> getAssessmentTypes() {
+		// TODO Auto-generated method stub
+		return repository.findAll().stream().map(a -> a.getType()).collect(Collectors.toSet());
+	}
+
+	
+
+	private List<AssessmentDTO> toAssessmentDTO(List<Assessment> assessments) {
+		return assessments.stream().map(assessment -> AssessmentDTO.builder().id(assessment.getId())
+				.name(assessment.getName()).type(assessment.getType()).build()).collect(Collectors.toList());
+	}
+
+	
 	
 
 }
